--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     </fieldset>
 
     <fieldset>
+        <legend>Tecnologia</legend>
+        <form action="">
+            <input type="text" name="tecnologia" placeholder="Tecnologia">
+            <input type="submit" value="Guardar">
+        </form>
+    </fieldset>
+
+    <fieldset>
         <legend>Temario</legend>
         <form action="">
             <input type="text" name="temario" placeholder="Nombre Temario"><br><br>
@@ -73,22 +81,43 @@
         </form>
     </fieldset>
     <fieldset>
+        <legend>Datos Camper</legend>
+        <br>
         <form id="jornada">
-            <h2>Datos Camper</h2>
             <input type="radio" id="manana"name="jornada" value="manana">Mañana</input>
             <input type="radio" id="tarde" name="jornada" value="tarde">Tarde</input>
+            <br><br>
         </form> 
                  
         <form id="myFormularioPersonas">
             <select name="sede"></select>
-            <select name="team"></select><br>
-            <input type="text" name="nombre" placeholder="Ingrese el nombre "><br>
-            <input type="tel" name="telefono" placeholder="Ingrese el telefono"><br>
-            <input type="text" name="email" placeholder="ingrese Email">
-            <input type="text" name="transporte" placeholder="Medio de transporte">
-            <input type="text" name="nivel" placeholder="Nivel camper">
-            <input type="text" name="barrio" placeholder=electiva">
+            <select name="team"></select>
+            <select name="ntemario"></select>
+            <br><br>
+            <input type="text" name="nombre" placeholder="Ingrese el nombre "><br><br>
+            <input type="tel" name="telefono" placeholder="Ingrese el telefono"><br><br>
+            <input type="text" name="email" placeholder="ingrese Email"><br><br>
+            <input type="text" name="transporte" placeholder="Medio de transporte"><br><br>
+            <input type="number" name="nivel" placeholder="Nivel camper"><br><br>
+            <input type="text" name="barrio" placeholder=Barrio><br><br>
             <input type="submit" value="Guardar">
+        </form>
+    </fieldset>
+
+    <fieldset>
+        <legend>Datos Trainer</legend>
+        <form action="">
+            <select name="" id="">Team</select>
+            <form id="jornada">
+                <input type="radio" id="manana"name="jornada" value="manana">Mañana</input>
+                <input type="radio" id="tarde" name="jornada" value="tarde">Tarde</input>
+                <br><br>
+            </form> 
+            <input type="text" name="nombre" placeholder="Ingrese el nombre "><br><br>
+            <input type="tel" name="telefono" placeholder="Ingrese el telefono"><br><br>
+            <input type="text" name="email" placeholder="ingrese Email"><br><br>
+            <input type="submit" value="Guardar">
+
         </form>
     </fieldset>
 
