fix(taller 3): :rocket: prueba objetos

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <input type="radio" id="tarde" name="jornada" value="tarde">Tarde</input>
             <br><br>
             <select name="sede"></select>
-            <select name="team"></select>
-            <select name="ntemario"></select>
+            <select name="teamcamper"></select>
+            <select name="tecscroll"></select>
             <br><br>
             <input type="text" name="nombreCamp" placeholder="Ingrese el nombre "><br><br>
             <input type="tel" name="telefonoCamp" placeholder="Ingrese el telefono"><br><br>
